--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "firebase": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.8",
+    "react-slack-chat": "^1.10.2",
+    "react-web-gifted-chat": "^0.6.3",
+    "reactstrap": "^8.0.0",
+    "stream-chat-react": "^0.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
